--- a/index.html
+++ b/index.html
@@ -1,406 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GDSC UII x UPN</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body>
-    <!-- Navbar -->
-    <nav
-      class="flex justify-between bg-gradient-to-r from-[#4285F4] to-[#359CD7] px-[64px] py-[24.5px]"
-    >
-      <div class="flex space-x-[13px]">
-        <img src="assets/images/gdsc_logo.png" />
-        <div class="text-white">
-          <h1 class="text-lg font-semibold">Google Developer Student Club</h1>
-          <p class="text-sm">GDSC UII x UPNVY</p>
-        </div>
-      </div>
-      <div class="flex space-x-[29px] items-center text-white text-[16px]">
-        <a>About Us</a>
-        <a>Upcoming Events</a>
-        <a>Community Guidelines</a>
-        <button
-          class="bg-[#F9B31A] hover:bg-[#E3A318] active:bg-[#89620E] px-[32.5px] py-[10px] rounded-[10px] font-semibold"
-        >
-          Join Us
-        </button>
-      </div>
-    </nav>
-
-    <!-- Section 1 -->
-    <section class="mx-[98px] mt-[53px]">
-      <div class="flex items-center justify-between space-x-[72px]">
-        <div class="w-1/2 space-y-5">
-          <div class="text-[49px] font-bold text-[#3C79DE]">
-            <h1>Google Developer</h1>
-            <h1>Student Clubs</h1>
-          </div>
-          <p class="text-[18px]">
-            GDSC are university based community groups for students interested
-            in Google developer technologies. Students from all undergraduate or
-            graduate programs with an interest in growing as a developer are
-            welcome.
-          </p>
-          <p class="text-[18px]">
-            By joining a GDSC, students grow their knowledge in a peer-to-peer
-            learning environment and build solutions for local businesses and
-            their community.
-          </p>
-          <button
-            class="bg-[#F9B31A] hover:bg-[#E3A318] active:bg-[#89620E] px-[43.5px] py-[10px] font-semibold text-white rounded-lg text-[25px] mt-[26px]"
-          >
-            Join Us
-          </button>
-        </div>
-        <div class="w-1/2">
-          <img class="w-full" src="assets/images/banner.png" />
-        </div>
-      </div>
-      <div class="grid grid-cols-3 gap-[33px] mt-[53px]">
-        <div
-          class="shadow-xl rounded-lg flex flex-col items-center hover:bg-[#4285F4] hover:text-white p-[24px] space-y-5 text-center"
-        >
-          <img
-            src="assets/images/connect_banner.png"
-            class="w-[187px] h-[125px]"
-          />
-          <div class="space-y-3">
-            <h1 class="text-[25px] font-bold">Connect</h1>
-            <p>
-              Meet students interested in developer technologies at your college
-              or university. All are welcome, including those with diverse
-              backgrounds and different majors.
-            </p>
-          </div>
-        </div>
-        <div
-          class="shadow-xl rounded-lg flex flex-col items-center hover:bg-[#4285F4] hover:text-white p-[24px] space-y-5 text-center"
-        >
-          <img
-            src="assets/images/learn_banner.png"
-            class="w-[187px] h-[125px]"
-          />
-          <div class="space-y-3">
-            <h1 class="text-[25px] font-bold">Learn</h1>
-            <p>
-              Learn about a range of technical topics and gain new skills
-              through hands-on workshops, events, talks, and project-building
-              activities online and in-person.
-            </p>
-          </div>
-        </div>
-        <div
-          class="shadow-xl rounded-lg flex flex-col items-center hover:bg-[#4285F4] hover:text-white p-[24px] space-y-5 text-center"
-        >
-          <img
-            src="assets/images/grow_banner.png"
-            class="w-[187px] h-[125px]"
-          />
-          <div class="space-y-3">
-            <h1 class="text-[25px] font-bold">Grow</h1>
-            <p>
-              Apply new learnings to build great solutions for local problems.
-              Advance your skills, career, and network. Give back to your
-              community by helping others learn.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Section 2 -->
-    <section class="mt-12 ml-[98px] text-center">
-      <h1 class="text-[39px] font-bold mb-7">Upcoming Events</h1>
-      <div class="flex overflow-x-auto space-x-5 text-left">
-        <div
-          class="w-[300px] shadow-lg flex-shrink-0 p-5 border-2 rounded-lg border-gray-100"
-        >
-          <img
-            class="w-full h-[200px] rounded-lg"
-            src="assets/images/mobile_banner.png"
-          />
-          <h1 class="text-[20px] font-bold mt-3">Make an App with Flutter!</h1>
-          <div
-            class="flex justify-between text-sm text-gray-500 mt-3 mb-[77px]"
-          >
-            <p>Februari 20, 2023</p>
-            <p>Sleman, Indonesia</p>
-          </div>
-          <div
-            class="flex text-[#3C79DE] font-semibold items-center space-x-[16px]"
-          >
-            <h1 class="text-[16px]">Learn More</h1>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="3"
-              stroke="currentColor"
-              class="w-[16px] h-[16px]"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"
-              />
-            </svg>
-          </div>
-        </div>
-        <div
-          class="w-[300px] shadow-lg flex-shrink-0 p-5 border-2 rounded-lg border-gray-100"
-        >
-          <img
-            class="w-full h-[200px] rounded-lg"
-            src="assets/images/ai_banner.png"
-          />
-          <h1 class="text-[20px] font-bold mt-3">AI for Better Future?</h1>
-          <div
-            class="flex justify-between text-sm text-gray-500 mt-3 mb-[77px]"
-          >
-            <p>Februari 20, 2023</p>
-            <p>Sleman, Indonesia</p>
-          </div>
-          <div
-            class="flex text-[#3C79DE] font-semibold items-center space-x-[16px]"
-          >
-            <h1 class="text-[16px]">Learn More</h1>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="3"
-              stroke="currentColor"
-              class="w-[16px] h-[16px]"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"
-              />
-            </svg>
-          </div>
-        </div>
-        <div
-          class="w-[300px] shadow-lg flex-shrink-0 p-5 border-2 rounded-lg border-gray-100"
-        >
-          <img
-            class="w-full h-[200px] rounded-lg"
-            src="assets/images/uiux_banner.png"
-          />
-          <h1 class="text-[20px] font-bold mt-3">Introduction to UI/UX</h1>
-          <div
-            class="flex justify-between text-sm text-gray-500 mt-3 mb-[77px]"
-          >
-            <p>Februari 20, 2023</p>
-            <p>Sleman, Indonesia</p>
-          </div>
-          <div
-            class="flex text-[#3C79DE] font-semibold items-center space-x-[16px]"
-          >
-            <h1 class="text-[16px]">Learn More</h1>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="3"
-              stroke="currentColor"
-              class="w-[16px] h-[16px]"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"
-              />
-            </svg>
-          </div>
-        </div>
-        <div
-          class="w-[300px] shadow-lg flex-shrink-0 p-5 border-2 rounded-lg border-gray-100"
-        >
-          <img
-            class="w-full h-[200px] rounded-lg"
-            src="assets/images/cleancode_banner.png"
-          />
-          <h1 class="text-[20px] font-bold mt-3">Clean Code</h1>
-          <div
-            class="flex justify-between text-sm text-gray-500 mt-3 mb-[77px]"
-          >
-            <p>Februari 20, 2023</p>
-            <p>Sleman, Indonesia</p>
-          </div>
-          <div
-            class="flex text-[#3C79DE] font-semibold items-center space-x-[16px]"
-          >
-            <h1 class="text-[16px]">Learn More</h1>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="3"
-              stroke="currentColor"
-              class="w-[16px] h-[16px]"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"
-              />
-            </svg>
-          </div>
-        </div>
-        <div
-          class="w-[300px] shadow-lg flex-shrink-0 p-5 border-2 rounded-lg border-gray-100"
-        >
-          <img
-            class="w-full h-[200px] rounded-lg"
-            src="assets/images/tensorflow_banner.png"
-          />
-          <h1 class="text-[20px] font-bold mt-3">Intro to Tensorflow</h1>
-          <div
-            class="flex justify-between text-sm text-gray-500 mt-3 mb-[77px]"
-          >
-            <p>Februari 20, 2023</p>
-            <p>Sleman, Indonesia</p>
-          </div>
-          <div
-            class="flex text-[#3C79DE] font-semibold items-center space-x-[16px]"
-          >
-            <h1 class="text-[16px]">Learn More</h1>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="3"
-              stroke="currentColor"
-              class="w-[16px] h-[16px]"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"
-              />
-            </svg>
-          </div>
-        </div>
-        <div
-          class="w-[300px] shadow-lg flex-shrink-0 p-5 border-2 rounded-lg border-gray-100"
-        >
-          <img
-            class="w-full h-[200px] rounded-lg"
-            src="assets/images/ucdiagram_banner.png"
-          />
-          <h1 class="text-[20px] font-bold mt-3">Usecase Diagram</h1>
-          <div
-            class="flex justify-between text-sm text-gray-500 mt-3 mb-[77px]"
-          >
-            <p>Februari 20, 2023</p>
-            <p>Sleman, Indonesia</p>
-          </div>
-          <div
-            class="flex text-[#3C79DE] font-semibold items-center space-x-[16px]"
-          >
-            <h1 class="text-[16px]">Learn More</h1>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="3"
-              stroke="currentColor"
-              class="w-[16px] h-[16px]"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"
-              />
-            </svg>
-          </div>
-        </div>
-      </div>
-      <button
-        class="bg-[#4285F4] hover:bg-[#3C79DE] active:bg-[#244986] text-white px-[41.5px] py-[11.5px] rounded-lg font-semibold mt-[50px] text-[20px]"
-      >
-        Find More
-      </button>
-    </section>
-
-    <!-- Section 3 -->
-    <section
-      class="flex space-x-3 items-center bg-gradient-to-r from-[#4285F4] to-[#359CD7] mt-12 px-[50px]"
-    >
-      <div class="w-1/2 flex place-content-center">
-        <img src="assets/images/banner_2.png" />
-      </div>
-      <div class="space-y-5 py-[25px] w-1/2">
-        <h1 class="text-[39px] text-white font-bold">
-          Our Community Guidelines
-        </h1>
-        <p class="text-white">
-          Google is dedicated to providing a harassment-free and inclusive event
-          experience for everyone regardless of gender identity and expression,
-          sexual orientation, disabilities, neurodiversity, physical appearance,
-          size, ethnicity, nationality, race, age, religion, or other protected
-          category.
-        </p>
-        <button
-          class="bg-[#F9B31A] hover:bg-[#E3A318] active:bg-[#89620E] text-white px-7 py-2 text-lg rounded-lg"
-        >
-          Read the Guidline
-        </button>
-      </div>
-    </section>
-
-    <!-- Section 4 -->
-    <section class="flex flex-col items-center px-[128px] mt-12">
-      <h1 class="text-[25px] text-gray-500 text-center">
-        “Showing more representation in tech with GDSC UII greatly increases our
-        confidence, innovation, and performance. Especially in academic
-        environments, having a sense of belonging and community for students can
-        lead to success in tech together.”
-      </h1>
-      <div class="flex space-x-5 my-7 place-items-center justify-between">
-        <div class="col-span-1">
-          <img src="assets/images/person.png" />
-        </div>
-        <div class="text-gray-500 col-span-3">
-          <h1 class="font-bold">Annisa Fikri Qurota'yun</h1>
-          <p>GDSC Team Member</p>
-        </div>
-      </div>
-      <img src="assets/images/banner_3.png" />
-      <div class="text-[39px] font-semibold text-center mt-3">
-        <h1 class="text-[#689DF6]">
-          Together we connect, learn, and grow as part of
-        </h1>
-        <h1 class="text-[#3C79DE]">Google Developer Student Clubs</h1>
-      </div>
-      <button
-        class="bg-[#F9B31A] hover:bg-[#E3A318] active:bg-[#89620E] text-white py-[10px] px-[77px] py-2 rounded-lg font-semibold text-[25px] mt-5"
-      >
-        Join Us
-      </button>
-    </section>
-
-    <!-- Footer -->
-    <footer
-      class="flex justify-between bg-blue-500 px-[64px] py-[48.5px] mt-12"
-    >
-      <div class="flex space-x-[13px]">
-        <img src="assets/images/gdsc_logo.png" />
-        <div class="text-white">
-          <h1 class="text-lg font-semibold">Google Developer Student Club</h1>
-          <p class="text-sm">Universitas Islam Indonesia x UPN-V Yogyakarta</p>
-        </div>
-      </div>
-      <div class="flex space-x-[29px] items-center text-white">
-        <a>About Us</a>
-        <a>Upcoming Events</a>
-        <a>Community Guidelines</a>
-      </div>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GDSC UII</title>
+</head>
+<body>
+  Slicing Design Tailwind Starter
+</body>
 </html>
